--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,7 @@ body{
     justify-content: center;
     text-align: center;
     align-items: center; 
+    margin-bottom: 50px;
     background-color: rgb(255, 255, 255);;
     height:30em;
     width: 100%;
