mudando palheta de cores e adicionando textos

--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,9 @@
 }
 
 
+
 header {
-    background: rgb(129, 129, 129);
+    background: #16496e;
     align-content: center;
     position: fixed;
     width: 100%;
@@ -21,7 +22,7 @@ header {
  }
  #containerheader img{
     box-shadow: teal;
-    width: 10em;
+    width: 13em;
  }
 
  #listaheader{
@@ -46,7 +47,7 @@ body{
 }
 
 #fotogit{
-    border: 10px solid rgba(90, 166, 223, 1);
+    border: 10px solid #16496e;
     border-radius: 100%;
     max-height: 10em;
     max-width: 10em;
@@ -57,7 +58,6 @@ body{
     justify-content: center;
     text-align: center;
     align-items: center; 
-    margin-bottom: 50px;
     background-color: rgb(255, 255, 255);;
     height:30em;
     width: 100%;
@@ -66,7 +66,7 @@ body{
 #containerdev  h1{
     padding-top: 100px;
     padding-bottom: 3px;
-    color: rgba(90, 166, 223, 1);
+    color: #16496e;
     font-size: 50px;
     margin-bottom: 50px;
 }
@@ -105,21 +105,102 @@ body{
 }
 
 #paginainicial {
-    text-align: center;
-    background-image: linear-gradient(rgb(107, 107, 107), white);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    background-image: linear-gradient(0deg, rgba(196,210,221,1) 0%, #16496e 85%);;
     height:60em;
     width: 100%;
 }
-#paginainicial h3 {
-    color: black;
+
+
+#boxtexto {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    margin-top: -10em;
+    margin-right: -550px;
+    margin-left: -500px;
+    animation: text 4s ease 0s normal forwards;
+    
+}
+#boxtexto h1{
+    color: rgba(90, 166, 223, 1);
+    font-size: 80px;
+    margin-top: 50px;
+    margin-bottom: 0.3em;
+}
+
+#boxtexto p {
+    width: 40em;
+    text-align: justify;
+    letter-spacing: 3px;
+    text-indent: 50px;
+    font-size: 22px;
+}
+
+@keyframes text {
+    0.0%{
+        transform: scale(0) translate(0px) rotate(0deg);
+        opacity: 0;
+    }
+    49.6%{
+        transform: scale(0.5) translate(0px) rotate(0deg);
+        opacity: 0;
+    }
+    100%{
+        transform: scale(1) translate(0px) rotate(0deg);
+        opacity: 100;
+    }
 }
 
 
+
+
+#img1cel {
+    position: relative;
+    margin-top: -1em;
+    margin-left: -3em;
+    animation: img1cel 5s ease 0s normal forwards;
+}
+#img2cel {
+    position: relative;
+    margin-top: -1em;
+    margin-left: 3em;
+    animation: img2cel 5s ease 0s normal forwards;
+}
+
+
+
+@keyframes img1cel {
+    0.0%{
+        
+        transform: scale(1.2) translate(1.5em) rotate(-2deg);
+    }
+    100%{
+        
+        transform: scale(1.2) translate(-30em) rotate(-15deg);
+    }
+}
+
+@keyframes img2cel {
+    0.0%{
+        
+        transform: scale(1.2) translate(-1.5em) rotate(-2deg);
+    }
+    100%{
+        transform: scale(1.2) translate(30em) rotate(15deg);
+    }
+}
 
 
 #sobre {
     display: block;
-    background-color: rgba(90, 166, 223, 1);
+    background-color: #16496e;
     height:50em;
     width: 100%;
 }
@@ -149,14 +230,14 @@ body{
 }
 
 #conteinervideo h1{
-    color: rgba(90, 166, 223, 1);
+    color: #16496e;
     font-size: 50px;
     margin-top: 50px;
 }
 
 object {
     margin: 2px;
-    border: 10px solid rgba(90, 166, 223, 1);
+    border: 10px solid #16496e;
 }
 
 #slidecontainer {
@@ -165,7 +246,7 @@ object {
     justify-content: center;
     align-items: center;
     align-content: center;
-    background-color: rgba(90, 166, 223, 1);
+    background-color: #16496e;
     height:40em;
     width: 100%;
 }
@@ -185,14 +266,14 @@ object {
 
 
 #buttons{
-    background-color: rgba(90, 166, 223, 1);
+    background-color: #16496e;
     position: relative;
     z-index: 10;
     padding: 20px;
     cursor: pointer;
     border-radius: 30px;
     color: black;
-    border: 2px solid rgba(90, 166, 223, 1); /* Green */
+    border: 2px solid #16496e; /* Green */
     transition-duration: 0.4s;
 
 }
@@ -201,13 +282,13 @@ object {
     cursor: pointer;
     border-radius: 30px;
     background-color: white; /* Green */
-    color: rgba(90, 166, 223, 1);
+    color: #16496e;
 
 }
 
 .button2:link, a:visited {
     background-color: white;
-    color: rgba(90, 166, 223, 1);
+    color: #16496e;
     padding: 14px 25px;
     text-align: center;
     text-decoration: none;
@@ -216,7 +297,7 @@ object {
 
 .button2:visited{
     background-color: white;
-    color: rgba(90, 166, 223, 1);
+    color: #16496e;
     padding: 14px 25px;
     text-align: center;
     text-decoration: none;
