--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,6 @@ body{
 }
 
 #fotogit{
-    border: 10px solid #16496e;
     border-radius: 100%;
     max-height: 10em;
     max-width: 10em;
@@ -67,7 +66,7 @@ body{
 #containerdev  h1{
     padding-top: 100px;
     padding-bottom: 3px;
-    color: #16496e;
+    color: #fcfcfc;
     font-size: 50px;
     margin-bottom: 50px;
 }
@@ -228,7 +227,7 @@ body{
     align-items: center;
     align-content: center;
     background-color: #16496e;
-    height:50em;
+    height:35em;
     width: 100%;
 }
 #sobre p{
